--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "ant-design-pro",
   "version": "1.0.0",
   "private": true,
+  "main": "main.js",
+  "homepage": ".",
   "description": "An out-of-box UI solution for enterprise applications",
   "scripts": {
+    "electron-packager": "electron-packager . part --platform=darwin --arch=x64",
+    "electron-start": "electron .",
     "analyze": "cross-env ANALYZE=1 umi build",
     "build": "umi build",
     "deploy": "npm run site && npm run gh-pages",
@@ -27,20 +31,33 @@
     "test:component": "umi test ./src/components",
     "ui": "umi ui"
   },
-  "husky": { "hooks": { "pre-commit": "npm run lint-staged" } },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-staged"
+    }
+  },
   "lint-staged": {
     "**/*.less": "stylelint --syntax less",
-    "**/*.{js,jsx,tsx,ts,less,md,json}": ["prettier --write", "git add"],
+    "**/*.{js,jsx,tsx,ts,less,md,json}": [
+      "prettier --write",
+      "git add"
+    ],
     "**/*.{js,jsx}": "npm run lint-staged:js",
     "**/*.{js,ts,tsx}": "npm run lint-staged:js"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 10"],
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 10"
+  ],
   "dependencies": {
     "@ant-design/pro-layout": "^4.8.3",
     "@antv/data-set": "^0.10.2",
     "antd": "^3.23.6",
     "classnames": "^2.2.6",
     "dva": "^2.4.1",
+    "electron-packager": "^14.1.1",
+    "electron-prebuilt": "^1.4.13",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "omit.js": "^1.0.2",
@@ -73,6 +90,8 @@
     "check-prettier": "^1.0.3",
     "cross-env": "^6.0.0",
     "cross-port-killer": "^1.1.1",
+    "devtron": "^1.4.0",
+    "electron-builder": "^21.2.0",
     "enzyme": "^3.9.0",
     "express": "^4.17.1",
     "gh-pages": "^2.0.1",
@@ -92,8 +111,12 @@
     "umi-plugin-pro": "^1.0.2",
     "umi-types": "^0.5.0"
   },
-  "optionalDependencies": { "puppeteer": "^1.17.0" },
-  "engines": { "node": ">=10.0.0" },
+  "optionalDependencies": {
+    "puppeteer": "^1.17.0"
+  },
+  "engines": {
+    "node": ">=10.0.0"
+  },
   "checkFiles": [
     "src/**/*.js*",
     "src/**/*.ts*",
